--- a/tooplate-graphite-creative.css
+++ b/tooplate-graphite-creative.css
@@ -100,13 +100,13 @@ nav a {
 	padding: 0 32px;
 	display: flex;
 	align-items: center;
-	background-color: tan;
+	background-color: grey;
 	color: black;
 	text-decoration: none;
 	font-size: 15px;
 	font-weight: 600;
-	border-left: 2px solid tan;
-	border-bottom: 2px solid tan;
+	border-left: 2px solid grey;
+	border-bottom: 2px solid grey;
 	transition: all 0.3s ease;
 	position: relative;
 	overflow: hidden;
@@ -121,14 +121,14 @@ nav a::before {
 	left: 0;
 	width: 100%;
 	height: 0;
-	background-color: tan;
+	background-color: grey;
 	transition: height 0.3s ease;
 	z-index: -1;
 }
 
 nav a:hover,
 nav a.active {
-	color: goldenrod;
+	color: grey;
 }
 
 nav a:hover::before,
