--- a/tooplate-graphite-creative.css
+++ b/tooplate-graphite-creative.css
@@ -359,7 +359,7 @@ main {
 
 .skills-card {
 	padding: 40px;
-	background-color: grey;
+	background-color: transparent;
 	border-right: 1px solid #2a2a2a;
 	border-bottom: 1px solid #2a2a2a;
 	transition: all 0.3s ease;
